# BeyondConvex

./: .gitignore  CMakeLists.txt  README.md  build_release.ps1  build_relwithdebinfo.ps1  fix_pragma_once.py  imgui.ini  test_glfw.cc
src/: CMakeLists.txt  geometry_utils.cc  geometry_utils.h
src/convex_hull/: convex_hull.cc  convex_hull.h  convex_hull_builder.cc  convex_hull_builder.h  convex_hull_factory.cc  convex_hull_factory.h
src/core/: convex_hull.cc  convex_hull.h  convex_hull_builder.cc  convex_hull_builder.h  convex_hull_factory.cc  convex_hull_factory.h  edge2d.h  geometry_core.cc  geometry_core.h  geometry_utils.cc  geometry_utils.h  point.cc  point.h  point2d.h  vector2d.h
src/dcel/: dcel.cc  dcel.h  dcel_builder.cc  dcel_builder.h  face.cc  face.h  half_edge.cc  half_edge.h  vertex.cc  vertex.h
src/intersection/: convex_polygon_intersection.cc  convex_polygon_intersection.h  line_segment_intersection.cc  line_segment_intersection.h
src/spatial_index/: spatial_index_common.h
src/spatial_index/bsptree/: bsptree.cc  bsptree.h
src/spatial_index/bvhtree/: bvhtree.cc  bvhtree.h
src/spatial_index/kdtree/: kdtree.cc  kdtree.h  kdtree_node.h
src/spatial_index/quadtree/: quadtree.cc  quadtree.h  quadtree_node.h
src/spatial_index/rtree/: rtree.cc  rtree.h  rtree_node.h
src/triangulation/: delaunay_triangulation.cc  delaunay_triangulation.h  delaunay_triangulation_optimized.cc  delaunay_triangulation_optimized.h  ear_clipping_triangulation.cc  ear_clipping_triangulation.h  spatial_grid.h  sweep_line_triangulation.cc  sweep_line_triangulation.h  triangulation.cc  triangulation.h  triangulation.h.bak  triangulation_algorithm.h  triangulation_factory.cc  triangulation_factory.h  triangulation_types.cc  triangulation_types.h  triangulation_utils.cc  triangulation_utils.h
src/utils/: geometry_utils.cc  geometry_utils.h
src/voronoi/: dcel_helper.cc  dcel_helper.h  half_plane_clipper.cc  half_plane_clipper.h  voronoi.cc  voronoi.h  voronoi_algorithm.h  voronoi_algorithm_factory.cc  voronoi_dcel.cc  voronoi_dcel.h  voronoi_diagram.cc  voronoi_diagram.h  voronoi_divide_conquer.cc  voronoi_divide_conquer.h  voronoi_incremental.cc  voronoi_incremental.h  voronoi_types.h
viewer/: CMakeLists.txt  demo_manager.cc  demo_manager.h  geometry_canvas.cc  geometry_canvas.h  main.cc  scene_manager.cc  scene_manager.h
viewer/demos/: delaunay_benchmark.cc  demo_base.h  point_draw_demo.cc  point_draw_demo.h  scene_base.h  to_left_test_demo.cc  to_left_test_demo.h
viewer/demos/convex_hull/: convex_hull_demo_scene.cc  convex_hull_demo_scene.h  convex_hull_scene.cc  convex_hull_scene.h  incremental_construction_scene.cc  incremental_construction_scene.h  to_left_test_scene.cc  (+1 more)
(+83 files in other folders)
